--- a/college-attendance-frontend/package.json
+++ b/college-attendance-frontend/package.json
@@ -1,13 +1,18 @@
+
 {
   "name": "college-attendance-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://github.com/prriyanshi2012006-droid/CollegeAttendanceSystem",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview ",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -26,6 +31,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "^7.2.2"
   }
