--- a/college-attendance-frontend/package.json
+++ b/college-attendance-frontend/package.json
@@ -4,8 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://prriyanshi2012006-droid.github.io/CollegeAttendanceSystem/",
-
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -19,6 +17,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "axios": "^1.13.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6"
